results/SpecGenBench/2-shot/log-FindClosestNum-2023_11_06_00_04_37.txt
class FindClosestNum {
    //@ requires nums != null && nums.length > 0;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; nums[i] >= \result);
    //@ ensures (\exists int i; 0 <= i && i < nums.length; nums[i] == \result);
    public int findClosestNumber(int[] nums) {
        int ans = Integer.MAX_VALUE;

        //@ maintaining (\forall int i; 0 <= i && i < nums.length; nums[i] >= ans);
        //@ decreases nums.length - i;
        for(int i = 0; i < nums.length; i++) {
            int num = nums[i];
            int absNum = (num<0?-num:num);
            int absAns = (ans<0?-ans:ans);
            if(absNum < absAns || (absNum == absAns && num > ans)) {
                ans = num;
            }
        }

        return ans;
    }
}
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:8: error: variable i is already defined in method findClosestNumber(int[])
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; nums[i] >= ans);
                                     ^
1 error

